@@ -34,7 +34,7 @@ Set the new password and click "Set" button on each user.
     <thead>
     <tr>
         <th>User Name</th><th>Hashed Password</th><th>Email</th><th>Real Name</th>
-        <th>Groups</th><th>Belongings</th><th></th>
+        <th>Groups</th><th></th>
     </tr>
     </thead>
     <tbody>
@@ -61,7 +61,7 @@ Set the new password and click "Set" button on each user.
                 </span>
             </span>
         </td>
-        <td><span data-im="authuser@belonging"></span></td>
+        <!--<td><span data-im="authuser@belonging"></span></td>-->
         <td></td>
     </tr>
     </tbody>
